fix: Bot macht 10 prozent fehler wenn man vorne liegt, 35 prozent wenn spiel beginnt und 60 prozent wenn man schlechter ist